--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ a:hover {color: black;}
     margin: 0 auto;
     width: 50%;
     padding: 200px 20px 20px;
-    background: rgba(255,255,255,.95);
+/*    background: rgba(255,255,255,.95);*/
     border-radius: 5px;
     min-height: 600px;
     position: relative;
@@ -164,8 +164,10 @@ textarea {
     margin: 0 auto;
     margin-bottom: 20px;
     padding: 30px;
-    border: 2px solid #90C32E;
-    
+/*    border: 2px solid #90C32E;*/
+    border: 2px solid rgba(0,0,0,.1);
+    border-radius: 5px;
+    background: rgba(255,255,255,.95);
 }
 
 .post_container img {float: left; padding-right: 10px;}
